Bug 1838703 - [dom/bindings] Mark SetAsFoo() as nodiscard. r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D181140