dom/crypto/WebCryptoTask.h
@@ -91,7 +91,7 @@ class WebCryptoTask : public CancelableRunnable {
                                        CryptoKey& aKey,
                                        const CryptoOperationData& aData) {
     CryptoOperationData dummy;
-    dummy.SetAsArrayBuffer(aCx);
+    Unused << dummy.SetAsArrayBuffer(aCx);
     return CreateSignVerifyTask(aCx, aAlgorithm, aKey, dummy, aData, true);
   }
 
