dom/media/MediaManager.cpp
@@ -2528,7 +2528,7 @@ static void ReduceConstraint(
     aConstraint.SetAsMediaTrackConstraints().mMediaSource.Construct(
         *mediaSource);
   } else {
-    aConstraint.SetAsMediaTrackConstraints();
+    Unused << aConstraint.SetAsMediaTrackConstraints();
   }
 }
 
