dom/bindings/Codegen.py
@@ -6340,7 +6340,9 @@ def getJSToNativeConversionInfo(
                     ctorArgs = ""
                 # It's enough to set us to the right type; that will
                 # create an empty array, which is all we need here.
-                default = CGGeneric("%s.RawSetAs%s(%s);\n" % (value, name, ctorArgs))
+                default = CGGeneric(
+                    "Unused << %s.RawSetAs%s(%s);\n" % (value, name, ctorArgs)
+                )
             elif defaultValue.type.isEnum():
                 name = getUnionMemberName(defaultValue.type)
                 # Make sure we actually construct the thing inside the nullable.
@@ -12867,6 +12869,7 @@ class CGUnionStruct(CGThing):
                         vars["ctorArgList"],
                         bodyInHeader=not self.ownsMembers,
                         body=body % "MOZ_ASSERT(mType == eUninitialized);",
+                        noDiscard=True,
                     )
                 )
                 methods.append(
@@ -12876,6 +12879,7 @@ class CGUnionStruct(CGThing):
                         vars["ctorArgList"],
                         bodyInHeader=not self.ownsMembers,
                         body=body % uninit,
+                        noDiscard=True,
                     )
                 )
 
@@ -13295,6 +13299,7 @@ class ClassMethod(ClassItem):
         breakAfterSelf="\n",
         override=False,
         canRunScript=False,
+        noDiscard=False,
     ):
         """
         override indicates whether to flag the method as override
@@ -13314,10 +13319,13 @@ class ClassMethod(ClassItem):
         self.breakAfterSelf = breakAfterSelf
         self.override = override
         self.canRunScript = canRunScript
+        self.noDiscard = noDiscard
         ClassItem.__init__(self, name, visibility)
 
     def getDecorators(self, declaring):
         decorators = []
+        if self.noDiscard:
+            decorators.append("[[nodiscard]]")
         if self.canRunScript:
             decorators.append("MOZ_CAN_RUN_SCRIPT")
         if self.inline:
